# crypto_predictor_prod

./: Makefile  README.md  pyproject.toml
dashboards/: candles.json
deployment/: create_cluster.sh  install_kafka.sh
deployment/dev/: create_cluster.sh  install_grafana.sh  install_kafka_ui.sh  install_metabase.sh  install_risingwave.sh
deployment/dev/yamls/: backfill-config.yaml  backfill-technical-indicators.yaml  candles.yaml  metabase-values.yaml  mlflow-minio-secret.yaml  technical-indicators-historical-j.yaml  trades-historical.yaml  trades.yaml
deployment/dev/yamls/backfill-technical-indicators/: backfill-config.yaml  candles-historical.yaml  kustomizatoin.yaml  technical-indicators-historical-d.yaml  technical-indicators-historical-j.yaml  trades-historical.yaml
deployment/historical/: candles-historical-j.yaml  candles-historical.yaml  technical-indicators-historical.yaml  trades-historical-j.yaml
deployment/prod/: candles.yaml  trades.yaml
deployment/prod/yamls/: kafka-ui-all-in-one.yaml  trades.yaml
deployment/yamls/: kind-with-port-mapping.yaml
scripts/: build-and-push-image.sh  deploy.sh
services/candles/: pyproject.toml
services/candles/src/candles/: config.py  main.py
services/news/: pyproject.toml
services/news/src/news/: main.py  news_data_source.py  (+1 more)
services/prediction-api/: Cargo.toml  env.local
services/prediction-api/src/: main.rs
services/predictor/: eda_report.html  pyproject.toml
services/technical_indicators/: pyproject.toml
services/technical_indicators/src/: main.py
services/trades/: README.md  pyproject.toml
(+19 files in other folders)
