[project]
name = "candles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jorge", email = "jorgepadres789@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
